@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Tue Aug 13 17:27:21 CEST 2013
-buildNumber0=2312
+#Sun Aug 18 11:14:25 CEST 2013
+buildNumber0=2363
